Fix FAQ Section Spacing
Fixed FAQ Section Spacing

--- a/sass/components/_faq.scss
+++ b/sass/components/_faq.scss
@@ -3,16 +3,15 @@
 // Mobile Styling - Media Query
 
 .faq {
-    padding: 1em 0 1.5em 0;
-}
-
-.faq h2 {
-    margin-bottom: 1rem;
+    padding: 0.5rem 0 1.5rem 0;
 }
 
 .faq h3, p {
-    max-width: 100%;
     line-height: 26px;
+}
+
+.faq h3 {
+    margin-bottom: 0.5rem;
 }
 
 .faq p {
@@ -24,7 +23,7 @@
 @media screen and (min-width: 48em) { 
 
     .faq {
-        padding: 1em 0 2em 0;
+        padding: 0.5rem 0 2.5rem 0;
     }
 
     .faq h2 {
@@ -46,11 +45,7 @@
 @media screen and (min-width: 64em) {
 
     .faq {
-        padding: 1.75em 0 2.5em 0;
-    }
-
-    .faq h2 {
-        margin-bottom: 1.5rem;
+        padding: 1 0 2.5rem 0;
     }
 
     .faq h3 {
@@ -68,11 +63,11 @@
 @media screen and (min-width: 120em) {
 
     .faq {
-        padding: 1.75em 0 1.5em 0;
+        padding: 1rem 0 3rem 0;
     }
 
     .faq h2 {
-        margin-bottom: 1em;
+        margin-bottom: 2rem;
     }
 
     .faq h3 {
@@ -82,7 +77,6 @@
     .faq p {
         font-size: 25px;
         line-height: 45px;
-        margin: 1.25rem 0 2rem 0;
-        max-width: 100%;
+        margin: 1.5rem 0 1.5rem 0;
     }
 }
